--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -129,7 +129,7 @@ development:
 test:
   clients:
     default:
-      database: test_project
+      database: locomotivecms_production
       hosts:
         - localhost:27017
       options:
@@ -137,11 +137,11 @@ test:
           mode: :primary
         max_pool_size: 1
 
-
 production:
-    clients:
-        default:
-            uri: <%= ENV['MONGODB_URI'] %>;
-        options:
-            skip_version_check: true
-        safe: true
+  clients:
+    default:
+      uri: <%= ENV['MONGODB_URI'] || ENV['MONGOHQ_URL'] || ENV['MONGO_URL'] || ENV['MONGOLAB_URI'] %>
+      options:
+        read:
+          mode: :primary
+        max_pool_size: 1
